git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1076 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/sales_general.html.haml
+++ b/app/views/management/sales_general.html.haml
@@ -8,6 +8,7 @@
       - f.field :sale_order, :client_id, :choices=>:clients, :new=>{:controller=>:relations, :action=>:entities_create}
       - f.title :conditions
       - f.field :sale_order, :nature_id, :choices=>@current_company.sale_order_natures.collect{|x| [x.name, x.id]}
+      - f.field :sale_order, :currency_id, :choices=>@current_company.currencies.collect{|c| [c.name, c.id]}
       - f.field :sale_order, :responsible_id, :choices=>@current_company.employees.find(:all, :order=>:last_name).collect{|x| [x.full_name, x.id]}, :new=>{:controller=>:resources, :action=>:employees_create}
       - f.field :sale_order, :contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entities_contacts_create, :id=>@current_company.entity_id}
       - f.field :sale_order, :delivery_contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entities_contacts_create, :id=>@current_company.entity_id}
