--- a/app/views/management/_sale_order_lines_form.html.haml
+++ b/app/views/management/_sale_order_lines_form.html.haml
@@ -11,21 +11,23 @@
   =formalize do |f|
     - f.field :subscription, :first_number
     - f.field :subscription, :last_number
-    -#f.field :subscription, :contact_id, :choices=>:contact
-    - f.field :subscription, :contact_id, :choices=>@current_company.contacts.find_all_by_active(true).collect{|x| [x.entity.full_name+" "+x.address, x.id]}
+    - #f.field :subscription, :contact_id, :choices=>@current_company.contacts.find_all_by_active(true).collect{|x| [x.entity.full_name+" "+x.address, x.id]}
 
 #subscription_date{:style=>'display:none'}
   =formalize do |f|
     - f.field :subscription, :started_on
-    - f.field :subscription, :finished_on
-    -# f.field :subscription, :contact_id, :choices=>:contact
-    - f.field :subscription, :contact_id, :choices=>@current_company.contacts.find_all_by_active(true).collect{|x| [x.entity.full_name+" "+x.address, x.id]}
- 
--if @current_user.free_price
+    - f.field :subscription, :stopped_on
+    -# f.field :subscription, :contact_id, :choices=>@current_company.contacts.find_all_by_active(true).collect{|x| [x.entity.full_name+" "+x.address, x.id]}
+
+#subscriptions{:style=>'display:none'}
   =formalize do |f|
-    -f.title :free_price
-    -f.field :sale_order_line, :price_amount
-    -f.field :sale_order_line, :tax_id, :choices=>@current_company.taxes.find_all_by_deleted(false).collect{|x| [x.name, x.id]}
+    - f.field :subscription, :contact_id, :choices=>:all_contacts
+
+-#if @current_user.free_price
+=formalize do |f|
+  -f.title :free_price
+  -f.field :sale_order_line, :price_amount
+  -f.field :sale_order_line, :tax_id, :choices=>@current_company.taxes.find_all_by_deleted(false).collect{|x| [x.name, x.id]}
 
 
 =observe_field("sale_order_line_price_id", :url=>{:action => :subscription_find}, :frequency => 0.25, :with=>"sale_order_line_price_id")
