--- a/app/views/management/sales_deliveries.html.haml
+++ b/app/views/management/sales_deliveries.html.haml
@@ -3,11 +3,11 @@
 = toolbar do
   - link :sales_print, :id=>@sale_order.id
 
-%h2=tc :undelivered
-=dyta :undelivered_quantities
+-if @undelivered
+  %h2=tc :undelivered
+  =dyta :undelivered_quantities
 
 %h2=tc :deliveries
-
 =toolbar do
   -link :deliveries_create if !@sale_order.invoiced && @undelivered
 =dyta :sales_deliveries
