git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1086 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -17,6 +17,7 @@
   -f.field :entity, :born_on
   -#f.field :entity, :dead_on
   -f.field :entity, :website
+  -f.field :entity, :photo
   -f.field :entity, :comment, :field=>:textarea
   -f.field :entity, :ean13
   -for datum in @complement_data
