git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1093 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_subscription_natures_form.html.haml
+++ b/app/views/management/_subscription_natures_form.html.haml
@@ -5,6 +5,7 @@
   -else
     - f.field t('activerecord.attributes.subscription_nature.nature'), @subscription_nature.read_nature
   - f.field :subscription_nature, :name
+  - f.field :subscription_nature, :reduction_rate
 =formalize(:id=>:number) do |f|
   - f.field :subscription_nature, :actual_number
 =formalize do |f|
