--- a/app/views/management/_products_form.html.haml
+++ b/app/views/management/_products_form.html.haml
@@ -19,6 +19,7 @@
 
 =formalize do |f|
   - f.field :product, :supply_method, :field=>:radio, :choices=>Product.supply_methods
+  - f.field :product, :reduction_submissive
   - f.field :product, :active
   - f.field :product, :to_purchase
   - f.field :product, :to_sale
