git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1095 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_subscription_natures_form.html.haml
+++ b/app/views/management/_subscription_natures_form.html.haml
@@ -3,7 +3,7 @@
   -if @subscription_nature.new_record?
     - f.field :subscription_nature, :nature, :field=>:radio, :choices=>SubscriptionNature.natures
   -else
-    - f.field t('activerecord.attributes.subscription_nature.nature'), @subscription_nature.read_nature
+    - f.field t('activerecord.attributes.subscription_nature.nature'), @subscription_nature.nature_label
   - f.field :subscription_nature, :name
   - f.field :subscription_nature, :reduction_rate
 =formalize(:id=>:number) do |f|
