git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1096 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/sales_products.html.haml
+++ b/app/views/management/sales_products.html.haml
@@ -23,6 +23,8 @@
   .actions
     =link_to tg(:previous), :action=>:sales_general
     - if @sale_order.state == 'P' and @sale_order.lines.size>0
-      =submit_tag(tc('estimate_to_order'), :action=>:sales_deliveries)
+      =#submit_tag(tc('estimate_to_order'), :action=>:sales_deliveries)
+      =link_to(tc('estimate_to_order'), {:action=>:sales_products}, :method=>:post)
+      =link_to(tc('invoice_sale_order'), {:action=>:sale_orders_invoice, :id=>@sale_order.id}, :method=>:post)
     - elsif @sale_order.lines.size>0
       =link_to tc('deliveries'), :action=>:sales_deliveries, :id=>@sale_order.id
