--- a/app/views/management/sales_deliveries.html.haml
+++ b/app/views/management/sales_deliveries.html.haml
@@ -15,4 +15,5 @@
 - form_tag() do
   .actions
     =link_to tg(:previous), :action=>:sales_products
-    =submit_tag(tc('invoice'), :action=>:sales_invoices)
+    =#submit_tag(tc('invoice'), :action=>:sales_invoices)
+    =link_to(tc('invoice'), {:action=>:sales_invoices, :id=>@sale_order.id})
