--- a/app/views/management/sales_invoices.html.haml
+++ b/app/views/management/sales_invoices.html.haml
@@ -5,12 +5,13 @@
   =dyta :invoices
 
 -form_tag do
-  -if @rest_to_invoice
-    %h2=tc :rest_to_invoice
-    =dyta :deliveries_to_invoice
+  -#if @rest_to_invoice
+    %h2=#tc :rest_to_invoice
+    =#dyta :deliveries_to_invoice
 
   .actions
     =link_to tg(:previous), :action=>:sales_deliveries , :id=>@sale_order.id
-    -if @rest_to_invoice
+    -#if @rest_to_invoice
+    -if @can_invoice
       =submit_tag(tc('to_invoice'), {:action=>:sales_invoices})
     =link_to(tc('payments'), :action=>:sales_payments,:id=>@sale_order.id)
