--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,8 +3,8 @@
 %html{:xmlns=>'http://www.w3.org/1999/xhtml'}
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html;charset=UTF-8'}
-    %link{:rel=>"icon", :type=>"image/png", :href=>"/images/favicon.png"}
-    %title='Ekylibre - '+t("controllers.#{controller.controller_name.to_s}.title")
+    %link{:rel=>"icon", :type=>"image/png", :href=>image_path("favicon.png")}
+    %title='Ekylibre - '+t("controllers.#{controller.controller_name.to_s}.title")+' - '+t("views.#{controller.controller_name}.#{action_name}.title", @title||{})
     = stylesheet_link_tag 'application', 'dyta'
     = stylesheet_link_tag 'print', :media=>'print'
     = javascript_include_tag :defaults
