git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1099 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_deliveries_form.html.haml
+++ b/app/views/management/_deliveries_form.html.haml
@@ -15,7 +15,7 @@
     %th Quantité
   -for @line in @delivery_lines
     %tr{:class=>cycle('odd','even')}
-      %td=@line.order_line.product.name
+      %td=@line.order_line.label
       %td=@line.order_line.price.amount
       %td=@line.order_line.price.amount_with_taxes
       %td=@line.order_line.unit.name
