git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1100 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/sales_deliveries.html.haml
+++ b/app/views/management/sales_deliveries.html.haml
@@ -16,4 +16,4 @@
   .actions
     =link_to tg(:previous), :action=>:sales_products
     =#submit_tag(tc('invoice'), :action=>:sales_invoices)
-    =link_to(tc('invoice'), {:action=>:sales_invoices, :id=>@sale_order.id}, {:method=>:post})
+    =link_to(tc('invoice'), {:action=>:sales_invoices, :id=>@sale_order.id}, {:method=>:post, :confirm=>tc(:are_you_sure_to_invoice)})
