--- a/app/views/management/_sale_order_lines_form.html.haml
+++ b/app/views/management/_sale_order_lines_form.html.haml
@@ -7,6 +7,7 @@
   -f.field :sale_order_line, :price_id, :choices=>@current_company.available_prices.collect{|x| [x.label, x.id]}, :new=>{:action=>:prices_create, :mode=>:sales}
   - f.field :sale_order_line, :location_id, :choices=>@stock_locations.collect{|x| [x.name, x.id]} if @stock_locations.size > 1
   - f.field :sale_order_line, :quantity
+  - f.field :sale_order_line, :annotation, :field=>:textarea
 
 #subscription_number{:style=>'display:none'}
   =formalize do |f|
