--- a/app/views/management/sales_products.html.haml
+++ b/app/views/management/sales_products.html.haml
@@ -25,6 +25,6 @@
     - if @sale_order.state == 'P' and @sale_order.lines.size>0
       =#submit_tag(tc('estimate_to_order'), :action=>:sales_deliveries)
       =link_to(tc('estimate_to_order'), {:action=>:sales_products}, :method=>:post)
-      =link_to(tc('invoice_sale_order'), {:action=>:sale_orders_invoice, :id=>@sale_order.id}, :method=>:post)
+      =link_to(tc('invoice_sale_order'), {:action=>:sale_orders_invoice, :id=>@sale_order.id}, :method=>:post, :confirm=>tc(:are_you_sure_to_invoice))
     - elsif @sale_order.lines.size>0
       =link_to tc('deliveries'), :action=>:sales_deliveries, :id=>@sale_order.id
