git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1101 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/mandates_configure.html.haml
+++ b/app/views/relations/mandates_configure.html.haml
@@ -1,5 +1,5 @@
 %h2
-  - form_tag(:action=>:mandates_config) do 
+  - form_tag(:action=>:mandates_configure) do 
     %table.dyta
       
       %tr
