git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1102 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_subscription_natures_form.html.haml
+++ b/app/views/management/_subscription_natures_form.html.haml
@@ -6,10 +6,10 @@
     - f.field t('activerecord.attributes.subscription_nature.nature'), @subscription_nature.nature_label
   - f.field :subscription_nature, :name
   - f.field :subscription_nature, :reduction_rate
+  - f.field :subscription_nature, :entity_link_nature_id, :choices=>@current_company.entity_link_natures.collect{|x| [x.name, x.id]}, :options=>{:include_blank=>true}
+  - f.field :subscription_nature, :comment, :field=>:textarea
 =formalize(:id=>:number) do |f|
   - f.field :subscription_nature, :actual_number
-=formalize do |f|
-  - f.field :subscription_nature, :comment, :field=>:textarea
 
 
 :javascript
