--- a/app/views/relations/mandates_configure.html.haml
+++ b/app/views/relations/mandates_configure.html.haml
@@ -1,30 +1,15 @@
-%h2
-  - form_tag(:action=>:mandates_configure) do 
-    %table.dyta
-      
-      %tr
-        %th="&nbsp;"
-        %th{:colspan=>2}=tc :filter
-        %th{:colspan=>2}=tc :mandate_new_value
-      %tr
-        %td=tc :family
-        %td=select_tag :filter_family, options_for_select(@filters_select)
-        %td=text_field_tag :family
-        %td=check_box_tag :family_check
-        %td=text_field_tag :new_family
-      %tr
-        %td=tc :organization
-        %td=select_tag :filter_organization, options_for_select(@filters_select)
-        %td=text_field_tag :organization
-        %td=check_box_tag :organization_check
-        %td=text_field_tag :new_organization
-      
-      %tr
-        %td=tc :title2
-        %td=select_tag :filter_title, options_for_select(@filters_select)
-        %td=text_field_tag :title
-        %td=check_box_tag :title_check
-        %td=text_field_tag :new_title
-     
-
+- form_tag(:action=>:mandates_config) do 
+  %table.dyta
+    %tr
+      %th=tc(:column)
+      %th{:colspan=>2}=tc :filter
+      %th{:colspan=>2}=tc :mandate_new_value
+    -for column in [:family, :organization, :title]
+      %tr{:class=>cycle('odd', 'even')}
+        %td=tc 'column_'+column.to_s
+        %td=select_tag "filter_#{column}".to_sym, options_for_select(@filters_select)
+        %td=text_field_tag column
+        %td=check_box_tag "#{column}_check".to_sym
+        %td=text_field_tag "new_#{column}".to_sym
+  .actions
     =submit_tag tc(:validate) 
