git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1105 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_sale_order_lines_form.html.haml
+++ b/app/views/management/_sale_order_lines_form.html.haml
@@ -23,7 +23,7 @@
 
 #subscriptions{:style=>'display:none'}
   =formalize do |f|
-    - f.field :subscription, :contact_id, :choices=>:all_contacts
+    - f.field :subscription, :contact_id, :choices=>:subscription_contacts
 
 -#if @current_user.free_price
 =formalize do |f|
