--- a/app/views/management/sales_general.html.haml
+++ b/app/views/management/sales_general.html.haml
@@ -35,7 +35,7 @@
 :javascript
   function update_contacts(value) {
     new Ajax.Request('#{url_for(:controller=>:management, :action => :sales_contacts)}', {asynchronous:true, evalScripts:true, parameters:'client_id=' + encodeURIComponent(value), onSuccess: function(resp) {
-      $('sale_order_contact_id').update(resp.responseText);
+      $('sale_order_contact_id').update(resp.responseText));
       $('sale_order_delivery_contact_id').update(resp.responseText); 
       $('sale_order_invoice_contact_id').update(resp.responseText);  
      }});
@@ -51,7 +51,6 @@
   }
   letter_informations();
 
-
-=observe_field "sale_order_client_id", :url=>{:action => :sales_contacts}, :frequency => 0.25, :function=>"update_contacts(value)"
+=observe_field "sale_order_client_id",:url=>{:action => :sales_contacts}, :frequency => 0.25, :function=>"update_contacts(value)"
 
 =observe_field("sale_order_letter_format", :frequency=>0.25, :function=> "letter_informations();")
