--- a/app/views/management/sales_general.html.haml
+++ b/app/views/management/sales_general.html.haml
@@ -10,9 +10,9 @@
       - f.field :sale_order, :nature_id, :choices=>@current_company.sale_order_natures.collect{|x| [x.name, x.id]}
       - f.field :sale_order, :currency_id, :choices=>@current_company.currencies.collect{|c| [c.name, c.id]}
       - f.field :sale_order, :responsible_id, :choices=>@current_company.employees.find(:all, :order=>:last_name).collect{|x| [x.full_name, x.id]}, :new=>{:controller=>:resources, :action=>:employees_create}
-      - f.field :sale_order, :contact_id, :choices=>@contacts#, :new=>{:controller=>:relations, :action=>:entities_contacts_create, :id=>@current_company.entity_id}
-      - f.field :sale_order, :delivery_contact_id, :choices=>@contacts#, :new=>{:controller=>:relations, :action=>:entities_contacts_create, :id=>@current_company.entity_id}
-      - f.field :sale_order, :invoice_contact_id, :choices=>@contacts#, :new=>{:controller=>:relations, :action=>:entities_contacts_create, :id=>@current_company.entity_id}
+      - f.field :sale_order, :contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entities_contacts_create, :id=>@current_company.entity_id}
+      - f.field :sale_order, :delivery_contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entities_contacts_create, :id=>@current_company.entity_id}
+      - f.field :sale_order, :invoice_contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entities_contacts_create, :id=>@current_company.entity_id}
     - else
       - f.field t('activerecord.attributes.sale_order.client_id'), @sale_order.client.full_name
       - f.title :conditions
@@ -35,7 +35,7 @@
 :javascript
   function update_contacts(value) {
     new Ajax.Request('#{url_for(:controller=>:management, :action => :sales_contacts)}', {asynchronous:true, evalScripts:true, parameters:'client_id=' + encodeURIComponent(value), onSuccess: function(resp) {
-      $('sale_order_contact_id').update(resp.responseText));
+      $('sale_order_contact_id').update(resp.responseText);
       $('sale_order_delivery_contact_id').update(resp.responseText); 
       $('sale_order_invoice_contact_id').update(resp.responseText);  
      }});
