--- a/app/views/management/sales_details.html.haml
+++ b/app/views/management/sales_details.html.haml
@@ -27,6 +27,8 @@
 %h2= tc 'invoices' 
 =dyta :invoice_lines
 %h2= tc 'payments'
+=toolbar do |t|
+  -t.link :payments_create if @sale_order.state == 'R' and @sale_order.unpaid_amount>0
 =dyta :payments
 
 .actions
