--- a/app/views/accountancy/_bank_accounts_form.html.haml
+++ b/app/views/accountancy/_bank_accounts_form.html.haml
@@ -16,7 +16,7 @@
   - f.field :bank_account, :address, :field=>:textarea
 =formalize do |f|  
   - f.title :accountancy
-  - f.field :bank_account, :account_id,  :choices => @current_company.accounts.find(:all, :conditions=>['number ilike ?','51%'], :order=>:number).collect {|b| [b.label, b.id]}, :new => {:action => :accounts_create}
+  - f.field :bank_account, :account_id,  :choices => @current_company.accounts.find(:all, :conditions=>['number LIKE ?','51%'], :order=>:number).collect {|b| [b.label, b.id]}, :new => {:action => :accounts_create}
   - f.field :bank_account, :currency_id, :choices => @current_company.currencies.find(:all).collect {|c| [c.name, c.id]}
   - f.field :bank_account, :journal_id,  :choices => @current_company.journals.find(:all).collect {|j| [j.name, j.id]}, :new => {:action => :journals_create}
  
