--- a/app/views/management/sales_details.html.haml
+++ b/app/views/management/sales_details.html.haml
@@ -1,6 +1,6 @@
 =toolbar do |t|
   -t.link :sales_products, :id=>@sale_order.id
-  -t.link :sales_print, :id=>@sale_order.id
+  -t.link :sale_orders_print, :id=>@sale_order.id
 
 %h2= tc 'general_informations'
 %table
