--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -264,9 +264,6 @@ input[type="text"].invalid:focus, input[type="password"].invalid:focus, textarea
 .window { padding:4px; background: #EEE; border: 1px solid #AAA; margin: 8px;}
 .window .dyta { background: white; }
 
-.center { text-align: center; }
-.center-line { text-align: center; color:#000088; padding: 0 0 5px 0; } 
-.quick-add { text-align: center;  padding: 0 0 5px 0; color:#004477; font-size:13px; font-weight:bold; }
 
 /* Droits utilisateurs */
 .right-category { text-align: center; padding: 15px 0 5px 0; font-weight: bold;}
@@ -288,7 +285,12 @@ div.dyli_complete ul strong.highlight {color: #800; margin:0; padding:0;}
 fieldset.itemize { border: 1px solid #777; -moz-border-radius: 8px; float: left; margin:8px;}
 fieldset.itemize legend { color: blue; margin: 0 8px; padding:2px;}
 
-.invoice { text-align:center;  padding:20px; font-size:15px; width: 200px;  background: #FDC; border:1px solid red; margin: 20px auto; }
+.center { text-align: center; }
+.center-line { text-align: center; color:#000088; padding: 0 0 5px 0; } 
+/*.quick-add { text-align: center;  padding: 0 0 5px 0; color:#004477; font-size:13px; font-weight:bold; }*/
+
+fieldset.quick-add { margin: 4px 0; border: 1px solid #95b0e4; -moz-border-radius: 4px; }
+fieldset.quick-add legend { margin: 0 4px; padding: 0 2px; font-weight:bold; }
 
 
 input.dyli { background: #FFF url(../images/buttons/previous2.png) right center no-repeat; }
