git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1124 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/sales_products.html.haml
+++ b/app/views/management/sales_products.html.haml
@@ -23,6 +23,11 @@
       %th=tc :amount_with_taxes
       %td=@sale_order.amount_with_taxes
 
+-if @sale_order.subscriptions.size>0
+  %h2=tc :subscriptions
+  =dyta :sale_order_subscriptions
+
+
 - form_tag do
   .actions
     =link_to tg(:previous), :action=>:sales_general
