--- a/public/stylesheets/dyta.css
+++ b/public/stylesheets/dyta.css
@@ -1,7 +1,9 @@
 h3.dyta {padding:4px;color: #139; font-size: 16px; }
 table.dyta { border-collapse: collapse; width: 100%; border-bottom: 1px solid #BACFE6;}
-table.dyta th { background: #e9f3fe url(../images/template/table_head.png) repeat-x bottom; padding:1px 3px; color: #336; font-weight: bold; font-size:13px; text-align:left; }
-table.dyta th.sorted { background: #C9D3E2 url(../images/template/table_head_sorted.png) repeat-x bottom; padding:2px 3px; color: #336; font-weight: bold; font-size:13px; text-align:left;}
+/*table.dyta th { background: #e9f3fe url(../images/template/table_head.png) repeat-x bottom; padding:1px 3px; color: #336; font-weight: bold; font-size:13px; text-align:left; }*/
+table.dyta th { background: #e9f3fe url(../images/template/table_head.png) repeat-x bottom; padding:1px 3px; color: #000; font-weight: normal; text-align:left; }
+table.dyta th:hover { background: #e9f3fe url(../images/template/table_head_hover.png) repeat-x bottom; }
+table.dyta th.sorted { background: #C9D3E2 url(../images/template/table_head_sorted.png) repeat-x bottom; padding:2px 3px; color: #000; font-weight: normal; text-align:left;}
 table.dyta th a.sort { display:block; margin-right:18px; text-decoration:none; padding: 1px; color: #336; }
 table.dyta th a.sort:active { padding:2px 0 0 2px;}
 table.dyta th a.sort.unsorted { background: url(../images/buttons/center.png) right center no-repeat; }
