Add the :default_order options in dyta in order to sort data by default
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1128 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/entity.html.haml
+++ b/app/views/relations/entity.html.haml
@@ -44,7 +44,7 @@
   -tb.tab(tc(:sale_orders_number , :count=>@sale_orders_number)) do |c|
     -c << toolbar do |t|
       -t.link(:sale_order_create, :controller=>:management, :id=>@entity.id)
-    -c << dyta(:entity_sales)
+    -c << dyta(:entity_sale_orders)
   -if @invoices_count>0
     -tb.tab(tc(:invoices, :count=>@invoices_count)) do |c|
       -c << dyta(:client_invoices)
