--- a/app/views/management/sales_details.html.haml
+++ b/app/views/management/sales_details.html.haml
@@ -1,5 +1,5 @@
 =toolbar do |t|
-  -t.link :sales_products, :id=>@sale_order.id
+  -t.link :sale_order_lines, :id=>@sale_order.id
   -t.link :sale_order_print, :id=>@sale_order.id
 
 %h2= tc 'general_informations'
