Update the embankments but not finished.
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1133 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/_user_form.html.haml
+++ b/app/views/company/_user_form.html.haml
@@ -11,7 +11,7 @@
   -f.field :user, :admin
   -f.field  t("views.company._users_form.employee"), check_box_tag(:create_employee)
 
-#employee=render :partial=>"resources/employees_form", :locals=>{:create_user=>true}
+#employee=render :partial=>"resources/employee_form", :locals=>{:create_user=>true}
  
 =formalize(:id=>:show_rights) do |f|
   -f.title :rights
