--- a/app/views/management/prices.html.haml
+++ b/app/views/management/prices.html.haml
@@ -3,7 +3,7 @@
     -form_tag do
       %label=tc "display"
       -for mode in @modes
-        =radio_button(:price, :mode , mode, :checked=>( mode=="all" ? true : false))+"&nbsp;"+content_tag(:label, tc(mode), :for=>'price_mode_'+mode)
+        =radio_button(:price, :mode , mode, :checked=>( mode=="all" ? true : false))+"&nbsp;"+content_tag(:label, tc(mode), :for=>'price_mode_'+mode)+"/n"
       =select(:price, :supply, @suppliers.collect{|x| [x.full_name,x.id]})
       =submit_tag tg('filter')
 =toolbar do
