Renames action sales_details to sale_order. Updates embankments.
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1143 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/index.html.haml
+++ b/app/views/management/index.html.haml
@@ -10,3 +10,6 @@
   %h2= tc('low_stocks')
   .stocks 
     =render :partial=>"stock_indicator"
+
+
+=# image_tag("gruff/#{@current_company.id}-test.png")
