--- a/app/views/management/invoices_display.html.haml
+++ b/app/views/management/invoices_display.html.haml
@@ -9,7 +9,7 @@
       = evalue @invoice, :amount
       = evalue @invoice, :amount_with_taxes
       = evalue @invoice, :credit
-      = evalue @invoice, :sale_order, :label=>:number, :url=>{:action=>:sales_details}
+      = evalue @invoice, :sale_order, :label=>:number, :url=>{:action=>:sale_order}
       = evalue @invoice, :origin, :label=>:number, :url=>{:action=>:invoices_display} if !@invoice.origin.nil?
 
 %h2= tc(:invoice_lines) 
