git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1146 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/account_letter.html.haml
+++ b/app/views/accountancy/account_letter.html.haml
@@ -17,8 +17,8 @@
         %td=entry.record.number
         %td.decimal=entry.debit
         %td.decimal=entry.credit
-        %td{:id => 'entry_letter_'+entry.id.to_s, :onclick => remote_function(:url => {:action => 'entries_letter', :id => entry.id })}=entry.letter    
+        %td{:id => 'entry_letter_'+entry.id.to_s, :onclick => remote_function(:url => {:action => 'entry_letter', :id => entry.id })}=entry.letter    
       
 %br  
-#lettering=render :partial => 'accounts_letter'
+#lettering=render :partial => 'account_letter'
 
