--- a/app/views/accountancy/_tax_form.html.haml
+++ b/app/views/accountancy/_tax_form.html.haml
@@ -4,7 +4,7 @@
     -f.field :tax, :nature, :field=>:radio, :choices=>Tax.natures
     -f.field :tax, :amount
   -else
-    -f.field t('activerecord.attributes.tax.nature'), @tax.text_nature
+    -f.field t('activerecord.attributes.tax.nature'), @tax.nature_label
     -f.field t('activerecord.attributes.tax.amount'), @tax.amount.to_s
   -f.field :tax, :name
   -f.field :tax, :included
