git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1152 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/statistics.html.haml
+++ b/app/views/management/statistics.html.haml
@@ -9,6 +9,6 @@
         %td=submit_tag tg("search_go")
 %br
 - unless session[:product].blank?
-  =image_tag "tmp/#{@current_company.name}/#{session[:product].gsub(' ','_')}-#{session[:nb_year]}.png"
+  =image_tag "gruff/#{@current_company.name}/#{session[:product].gsub(' ','_')}-#{session[:nb_year]}.png"
 
 
